src/test/run-pass/simple-alt-generic-tag.rs


enum opt<T> { none, }

fn main() {
    let x = none::<int>;
    match x { none::<int> => { debug!{"hello world"}; } }
}
