src/test/compile-fail/enum-in-scope.rs
enum hello = int;

fn main() {
    let hello = 0; //!ERROR declaration of `hello` shadows an enum that's in
}